[package]
authors.workspace = true
default-run = "alpm-soname"
description = "Library and commandline toolkit for looking up soname data in an ALPM context"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-soname"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-soname"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:clap-verbosity", "dep:serde_json"]
default = []

[dependencies]
alpm-package.workspace = true
alpm-pkginfo.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity = { workspace = true, optional = true }
goblin = "0.10.0"
log.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
simplelog.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
alpm-compress.workspace = true
alpm-mtree.workspace = true
assert_cmd.workspace = true
rstest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
