[package]
name = "alpm-srcinfo"
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM .SRCINFO files"
version = "0.1.0"
rust-version = "1.70.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "alpm-srcinfo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["winnow/debug"]

[dependencies]
alpm-types.workspace = true
clap = { workspace = true, optional = true }
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
testresult.workspace = true
