[package]
authors.workspace = true
description = "Library and command line tool for the specification and parsing of ALPM .SRCINFO files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-srcinfo"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-srcinfo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["winnow/debug"]

[dependencies]
alpm-types.workspace = true
clap = { workspace = true, optional = true }
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
testresult.workspace = true
