[package]
name = "alpm-types"
description = "Types for Arch Linux Package Management"
version = "0.4.0"
rust-version = "1.70.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
blake2 = "0.10.6"
digest = "0.10.7"
email_address = "0.2.4"
md-5 = "0.10.5"
regex = "1.10.2"
semver = "1.0.17"
sha1 = "0.10.5"
sha2 = "0.10.7"
strum = { version = "0.26.3", features = ["derive"] }
thiserror.workspace = true
time = "0.3.22"
url = "2.4.0"

[dev-dependencies]
proptest = "1.4.0"
rstest.workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]
