[package]
name = "alpm-types"
description = "Types for Arch Linux Package Management"
version = "0.4.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
winnow-debug = ["winnow/debug"]

[dependencies]
blake2 = "0.10.6"
digest = "0.10.7"
email_address = "0.2.4"
lazy-regex = "3.3.0"
md-5 = "0.10.5"
regex = "1.10.2"
semver = "1.0.17"
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10.5"
sha2 = "0.10.7"
spdx = "0.10.6"
strum.workspace = true
thiserror.workspace = true
time = "0.3.22"
url = { version = "2.4.0", features = ["serde"] }
winnow.workspace = true

[dev-dependencies]
proptest = "1.4.0"
rstest.workspace = true
testresult.workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]
