[package]
authors.workspace = true
description = "Types for Arch Linux Package Management"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-types"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.5.0"

[features]
winnow-debug = ["winnow/debug"]
# Enable tests that ensure that alpm is compatible to existing Arch Linux tooling.
# This requires certain Arch Linux related binaries to be installed on the system.
compatibility_tests = []

[dependencies]
blake2 = "0.10.6"
digest = "0.10.7"
email_address = "0.2.4"
lazy-regex = "3.3.0"
md-5 = "0.10.5"
regex = "1.10.2"
semver = "1.0.17"
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10.5"
sha2 = "0.10.7"
spdx = "0.10.6"
strum.workspace = true
thiserror.workspace = true
time = "0.3.22"
url = { version = "2.4.0", features = ["serde"] }
winnow.workspace = true
tuples.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
testresult.workspace = true

[package.metadata.cargo-machete]
ignored = ["md-5"]
