[package]
homepage = "https://gitlab.archlinux.org/archlinux/alpm/alpm"
repository = "https://gitlab.archlinux.org/archlinux/alpm/alpm"
name = "uapi-certificate-directory"
description = "UAPI Certificate Directory for distributions"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
edition = "2021"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]

[dependencies]
log = "0.4"
thiserror = "2"
