[package]
authors.workspace = true
description = "Development integration for testing and interacting with ALPM"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dev-scripts"
# This is a development crate. Never publish it.
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
alpm-buildinfo.workspace = true
alpm-mtree.workspace = true
alpm-pkginfo.workspace = true
alpm-srcinfo = { path = "../alpm-srcinfo" }
anyhow = "1"
clap.workspace = true
colored.workspace = true
dirs = "6"
indicatif = "0.17"
log = "0.4"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "json",
    "rustls-tls",
] }
simplelog = { version = "0.12", default-features = false }
strum.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
