[package]
authors.workspace = true
description = "Development integration for testing and interacting with ALPM"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dev-scripts"
# This is a development crate. Never publish it.
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[features]
_winnow-debug = ["winnow/debug"]

[dependencies]
alpm-buildinfo.workspace = true
alpm-common.workspace = true
alpm-mtree.workspace = true
alpm-pkgbuild.workspace = true
alpm-pkginfo.workspace = true
alpm-srcinfo = { path = "../alpm-srcinfo" }
anyhow = "1"
clap.workspace = true
colored.workspace = true
dirs = "6"
flate2.workspace = true
indicatif = "0.18"
log.workspace = true
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "json",
    "rustls-tls",
] }
serde_json.workspace = true
simplelog.workspace = true
strum.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
