[package]
name = "fluent-i18n"
version = "0.1.0-rc.1"
edition = "2021"
readme = "README.md"
description = "A declarative and ergonomic internationalization for Rust using Fluent"
authors = ["Orhun Parmaksız <orhun@archlinux.org>"]
license = "Apache-2.0 OR MIT"
homepage = "https://gitlab.archlinux.org/orhun/fluent-i18n"
repository = "https://gitlab.archlinux.org/orhun/fluent-i18n"
documentation = "https://docs.rs/fluent-i18n/"
keywords = ["fluent", "i18n", "internationalization", "localization"]
categories = ["internationalization", "localization"]
rust-version = "1.85.1"

[dependencies]
fluent-templates = "0.13.0"
sys-locale = "0.3.2"
thiserror = "2.0.12"
unic-langid = "0.9.6"

[dev-dependencies]
rstest = "0.26.1"
testresult = "0.4.1"
